packages/monaco-editor/grammar/dpm_xlParser.ts
// Generated from lib/dpm_xl.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { dpm_xlListener } from "./dpm_xlListener";
import { dpm_xlVisitor } from "./dpm_xlVisitor";


export class dpm_xlParser extends Parser {
	public static readonly BOOLEAN_LITERAL = 1;
	public static readonly AND = 2;
	public static readonly OR = 3;
	public static readonly XOR = 4;
	public static readonly NOT = 5;
	public static readonly ASSIGN = 6;
	public static readonly EQ = 7;
	public static readonly NE = 8;
	public static readonly LT = 9;
	public static readonly LE = 10;
	public static readonly GT = 11;
	public static readonly GE = 12;
	public static readonly MATCH = 13;
	public static readonly WITH = 14;
	public static readonly PLUS = 15;
	public static readonly MINUS = 16;
	public static readonly MULT = 17;
	public static readonly DIV = 18;
	public static readonly MAX_AGGR = 19;
	public static readonly MIN_AGGR = 20;
	public static readonly SUM = 21;
	public static readonly COUNT = 22;
	public static readonly AVG = 23;
	public static readonly MEDIAN = 24;
	public static readonly GROUP_BY = 25;
	public static readonly ABS = 26;
	public static readonly ISNULL = 27;
	public static readonly EXISTS = 28;
	public static readonly EXP = 29;
	public static readonly LN = 30;
	public static readonly SQRT = 31;
	public static readonly POWER = 32;
	public static readonly LOG = 33;
	public static readonly MAX = 34;
	public static readonly MIN = 35;
	public static readonly IN = 36;
	public static readonly COMMA = 37;
	public static readonly DOUBLE_POINTS = 38;
	public static readonly LPAREN = 39;
	public static readonly RPAREN = 40;
	public static readonly CURLY_BRACKET_LEFT = 41;
	public static readonly CURLY_BRACKET_RIGHT = 42;
	public static readonly SQUARE_BRACKET_LEFT = 43;
	public static readonly SQUARE_BRACKET_RIGHT = 44;
	public static readonly INTERVAL = 45;
	public static readonly DEFAULT = 46;
	public static readonly IF = 47;
	public static readonly THEN = 48;
	public static readonly ELSE = 49;
	public static readonly NVL = 50;
	public static readonly FILTER = 51;
	public static readonly WHERE = 52;
	public static readonly GET = 53;
	public static readonly RENAME = 54;
	public static readonly TO = 55;
	public static readonly TIME_SHIFT = 56;
	public static readonly LEN = 57;
	public static readonly CONCAT = 58;
	public static readonly ROW = 59;
	public static readonly ROW_RANGE = 60;
	public static readonly ROW_ALL = 61;
	public static readonly ROW_HEADING = 62;
	public static readonly COL = 63;
	public static readonly COL_RANGE = 64;
	public static readonly COL_ALL = 65;
	public static readonly COL_HEADING = 66;
	public static readonly SHEET = 67;
	public static readonly SHEET_RANGE = 68;
	public static readonly SHEET_ALL = 69;
	public static readonly SHEET_HEADING = 70;
	public static readonly TABLE = 71;
	public static readonly VAR_REF = 72;
	public static readonly PRECONDITION_ELEM = 73;
	public static readonly TIME_PERIOD = 74;
	public static readonly EOL = 75;
	public static readonly WS = 76;
	public static readonly INTEGER_LITERAL = 77;
	public static readonly DECIMAL_LITERAL = 78;
	public static readonly PERCENT_LITERAL = 79;
	public static readonly STRING_LITERAL = 80;
	public static readonly EMPTY_LITERAL = 81;
	public static readonly LETTERS_NUMBERS = 82;
	public static readonly RULE_start = 0;
	public static readonly RULE_expression = 1;
	public static readonly RULE_expr = 2;
	public static readonly RULE_functions = 3;
	public static readonly RULE_numericOperators = 4;
	public static readonly RULE_comparisonFunctionOperators = 5;
	public static readonly RULE_filterOperators = 6;
	public static readonly RULE_timeOperators = 7;
	public static readonly RULE_conditionalOperators = 8;
	public static readonly RULE_stringOperators = 9;
	public static readonly RULE_aggregateOperators = 10;
	public static readonly RULE_groupingClause = 11;
	public static readonly RULE_member = 12;
	public static readonly RULE_dimension = 13;
	public static readonly RULE_dim_set = 14;
	public static readonly RULE_rowElem = 15;
	public static readonly RULE_colElem = 16;
	public static readonly RULE_sheetElem = 17;
	public static readonly RULE_rowHandler = 18;
	public static readonly RULE_colHandler = 19;
	public static readonly RULE_sheetHandler = 20;
	public static readonly RULE_interval = 21;
	public static readonly RULE_default = 22;
	public static readonly RULE_argument = 23;
	public static readonly RULE_cellRef = 24;
	public static readonly RULE_cellAddress = 25;
	public static readonly RULE_clauseOperators = 26;
	public static readonly RULE_comparisonOperators = 27;
	public static readonly RULE_literal = 28;
	public static readonly RULE_groupElements = 29;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "expression", "expr", "functions", "numericOperators", "comparisonFunctionOperators", 
		"filterOperators", "timeOperators", "conditionalOperators", "stringOperators", 
		"aggregateOperators", "groupingClause", "member", "dimension", "dim_set", 
		"rowElem", "colElem", "sheetElem", "rowHandler", "colHandler", "sheetHandler", 
		"interval", "default", "argument", "cellRef", "cellAddress", "clauseOperators", 
		"comparisonOperators", "literal", "groupElements",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, "'and'", "'or'", "'xor'", "'not'", "':='", "'='", 
		"'!='", "'<'", "'<='", "'>'", "'>='", "'match'", "'with'", "'+'", "'-'", 
		"'*'", "'/'", "'max_aggr'", "'min_aggr'", "'sum'", "'count'", "'avg'", 
		"'median'", "'group by'", "'abs'", "'isnull'", "'exists'", "'exp'", "'ln'", 
		"'sqrt'", "'power'", "'log'", "'max'", "'min'", "'in'", "','", "':'", 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "'interval'", "'default'", "'if'", 
		"'then'", "'else'", "'nvl'", "'filter'", "'where'", "'get'", "'rename'", 
		"'to'", "'time_shift'", "'len'", "'&'", undefined, undefined, "'r*'", 
		"'r'", undefined, undefined, "'c*'", "'c'", undefined, undefined, "'s*'", 
		"'s'", undefined, undefined, undefined, undefined, "';'", undefined, undefined, 
		undefined, undefined, undefined, "''''",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "BOOLEAN_LITERAL", "AND", "OR", "XOR", "NOT", "ASSIGN", "EQ", 
		"NE", "LT", "LE", "GT", "GE", "MATCH", "WITH", "PLUS", "MINUS", "MULT", 
		"DIV", "MAX_AGGR", "MIN_AGGR", "SUM", "COUNT", "AVG", "MEDIAN", "GROUP_BY", 
		"ABS", "ISNULL", "EXISTS", "EXP", "LN", "SQRT", "POWER", "LOG", "MAX", 
		"MIN", "IN", "COMMA", "DOUBLE_POINTS", "LPAREN", "RPAREN", "CURLY_BRACKET_LEFT", 
		"CURLY_BRACKET_RIGHT", "SQUARE_BRACKET_LEFT", "SQUARE_BRACKET_RIGHT", 
		"INTERVAL", "DEFAULT", "IF", "THEN", "ELSE", "NVL", "FILTER", "WHERE", 
		"GET", "RENAME", "TO", "TIME_SHIFT", "LEN", "CONCAT", "ROW", "ROW_RANGE", 
		"ROW_ALL", "ROW_HEADING", "COL", "COL_RANGE", "COL_ALL", "COL_HEADING", 
		"SHEET", "SHEET_RANGE", "SHEET_ALL", "SHEET_HEADING", "TABLE", "VAR_REF", 
		"PRECONDITION_ELEM", "TIME_PERIOD", "EOL", "WS", "INTEGER_LITERAL", "DECIMAL_LITERAL", 
		"PERCENT_LITERAL", "STRING_LITERAL", "EMPTY_LITERAL", "LETTERS_NUMBERS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(dpm_xlParser._LITERAL_NAMES, dpm_xlParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return dpm_xlParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "dpm_xl.g4"; }

	// @Override
	public get ruleNames(): string[] { return dpm_xlParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return dpm_xlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(dpm_xlParser._ATN, this);
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let _localctx: StartContext = new StartContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, dpm_xlParser.RULE_start);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << dpm_xlParser.BOOLEAN_LITERAL) | (1 << dpm_xlParser.NOT) | (1 << dpm_xlParser.MATCH) | (1 << dpm_xlParser.WITH) | (1 << dpm_xlParser.PLUS) | (1 << dpm_xlParser.MINUS) | (1 << dpm_xlParser.MAX_AGGR) | (1 << dpm_xlParser.MIN_AGGR) | (1 << dpm_xlParser.SUM) | (1 << dpm_xlParser.COUNT) | (1 << dpm_xlParser.AVG) | (1 << dpm_xlParser.MEDIAN) | (1 << dpm_xlParser.ABS) | (1 << dpm_xlParser.ISNULL) | (1 << dpm_xlParser.EXISTS) | (1 << dpm_xlParser.EXP) | (1 << dpm_xlParser.LN) | (1 << dpm_xlParser.SQRT))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (dpm_xlParser.POWER - 32)) | (1 << (dpm_xlParser.LOG - 32)) | (1 << (dpm_xlParser.MAX - 32)) | (1 << (dpm_xlParser.MIN - 32)) | (1 << (dpm_xlParser.LPAREN - 32)) | (1 << (dpm_xlParser.CURLY_BRACKET_LEFT - 32)) | (1 << (dpm_xlParser.SQUARE_BRACKET_LEFT - 32)) | (1 << (dpm_xlParser.IF - 32)) | (1 << (dpm_xlParser.NVL - 32)) | (1 << (dpm_xlParser.FILTER - 32)) | (1 << (dpm_xlParser.TIME_SHIFT - 32)) | (1 << (dpm_xlParser.LEN - 32)))) !== 0) || ((((_la - 72)) & ~0x1F) === 0 && ((1 << (_la - 72)) & ((1 << (dpm_xlParser.VAR_REF - 72)) | (1 << (dpm_xlParser.PRECONDITION_ELEM - 72)) | (1 << (dpm_xlParser.INTEGER_LITERAL - 72)) | (1 << (dpm_xlParser.DECIMAL_LITERAL - 72)) | (1 << (dpm_xlParser.PERCENT_LITERAL - 72)) | (1 << (dpm_xlParser.STRING_LITERAL - 72)) | (1 << (dpm_xlParser.EMPTY_LITERAL - 72)))) !== 0)) {
				{
				{
				this.state = 60;
				this.expression();
				this.state = 61;
				this.match(dpm_xlParser.EOL);
				}
				}
				this.state = 67;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 68;
			this.match(dpm_xlParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, dpm_xlParser.RULE_expression);
		try {
			this.state = 76;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case dpm_xlParser.BOOLEAN_LITERAL:
			case dpm_xlParser.NOT:
			case dpm_xlParser.MATCH:
			case dpm_xlParser.PLUS:
			case dpm_xlParser.MINUS:
			case dpm_xlParser.MAX_AGGR:
			case dpm_xlParser.MIN_AGGR:
			case dpm_xlParser.SUM:
			case dpm_xlParser.COUNT:
			case dpm_xlParser.AVG:
			case dpm_xlParser.MEDIAN:
			case dpm_xlParser.ABS:
			case dpm_xlParser.ISNULL:
			case dpm_xlParser.EXISTS:
			case dpm_xlParser.EXP:
			case dpm_xlParser.LN:
			case dpm_xlParser.SQRT:
			case dpm_xlParser.POWER:
			case dpm_xlParser.LOG:
			case dpm_xlParser.MAX:
			case dpm_xlParser.MIN:
			case dpm_xlParser.LPAREN:
			case dpm_xlParser.CURLY_BRACKET_LEFT:
			case dpm_xlParser.SQUARE_BRACKET_LEFT:
			case dpm_xlParser.IF:
			case dpm_xlParser.NVL:
			case dpm_xlParser.FILTER:
			case dpm_xlParser.TIME_SHIFT:
			case dpm_xlParser.LEN:
			case dpm_xlParser.VAR_REF:
			case dpm_xlParser.PRECONDITION_ELEM:
			case dpm_xlParser.INTEGER_LITERAL:
			case dpm_xlParser.DECIMAL_LITERAL:
			case dpm_xlParser.PERCENT_LITERAL:
			case dpm_xlParser.STRING_LITERAL:
			case dpm_xlParser.EMPTY_LITERAL:
				_localctx = new ExprWithoutPartialSelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 70;
				this.expr(0);
				}
				break;
			case dpm_xlParser.WITH:
				_localctx = new ExprWithSelectionContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 71;
				this.match(dpm_xlParser.WITH);
				this.state = 72;
				this.cellRef();
				this.state = 73;
				this.match(dpm_xlParser.DOUBLE_POINTS);
				this.state = 74;
				this.expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExprContext = new ExprContext(this._ctx, _parentState);
		let _prevctx: ExprContext = _localctx;
		let _startState: number = 4;
		this.enterRecursionRule(_localctx, 4, dpm_xlParser.RULE_expr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				{
				_localctx = new ParExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 79;
				this.match(dpm_xlParser.LPAREN);
				this.state = 80;
				this.expr(0);
				this.state = 81;
				this.match(dpm_xlParser.RPAREN);
				}
				break;

			case 2:
				{
				_localctx = new FuncExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 83;
				this.functions();
				}
				break;

			case 3:
				{
				_localctx = new UnaryExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 84;
				(_localctx as UnaryExprContext)._op = this._input.LT(1);
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << dpm_xlParser.NOT) | (1 << dpm_xlParser.PLUS) | (1 << dpm_xlParser.MINUS))) !== 0))) {
					(_localctx as UnaryExprContext)._op = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 85;
				this.expr(14);
				}
				break;

			case 4:
				{
				_localctx = new CondExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 86;
				this.match(dpm_xlParser.IF);
				this.state = 87;
				(_localctx as CondExprContext)._conditionalExpr = this.expr(0);
				this.state = 88;
				this.match(dpm_xlParser.THEN);
				this.state = 89;
				(_localctx as CondExprContext)._thenExpr = this.expr(0);
				this.state = 90;
				this.match(dpm_xlParser.ELSE);
				this.state = 91;
				(_localctx as CondExprContext)._elseExpr = this.expr(6);
				}
				break;

			case 5:
				{
				_localctx = new CondExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 93;
				this.match(dpm_xlParser.IF);
				this.state = 94;
				(_localctx as CondExprContext)._conditionalExpr = this.expr(0);
				this.state = 95;
				this.match(dpm_xlParser.THEN);
				this.state = 96;
				(_localctx as CondExprContext)._thenExpr = this.expr(5);
				}
				break;

			case 6:
				{
				_localctx = new DimExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 98;
				this.dimension();
				}
				break;

			case 7:
				{
				_localctx = new VarRefExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 99;
				this.match(dpm_xlParser.VAR_REF);
				}
				break;

			case 8:
				{
				_localctx = new LiteralExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 100;
				this.literal();
				}
				break;

			case 9:
				{
				_localctx = new CellRefExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 101;
				this.cellRef();
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 133;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 131;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
					case 1:
						{
						_localctx = new NumericExprContext(new ExprContext(_parentctx, _parentState));
						(_localctx as NumericExprContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, dpm_xlParser.RULE_expr);
						this.state = 104;
						if (!(this.precpred(this._ctx, 13))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
						}
						this.state = 105;
						(_localctx as NumericExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === dpm_xlParser.MULT || _la === dpm_xlParser.DIV)) {
							(_localctx as NumericExprContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 106;
						(_localctx as NumericExprContext)._right = this.expr(14);
						}
						break;

					case 2:
						{
						_localctx = new NumericExprContext(new ExprContext(_parentctx, _parentState));
						(_localctx as NumericExprContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, dpm_xlParser.RULE_expr);
						this.state = 107;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 108;
						(_localctx as NumericExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === dpm_xlParser.PLUS || _la === dpm_xlParser.MINUS)) {
							(_localctx as NumericExprContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 109;
						(_localctx as NumericExprContext)._right = this.expr(13);
						}
						break;

					case 3:
						{
						_localctx = new ConcatExprContext(new ExprContext(_parentctx, _parentState));
						(_localctx as ConcatExprContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, dpm_xlParser.RULE_expr);
						this.state = 110;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 111;
						(_localctx as ConcatExprContext)._op = this.match(dpm_xlParser.CONCAT);
						this.state = 112;
						(_localctx as ConcatExprContext)._right = this.expr(12);
						}
						break;

					case 4:
						{
						_localctx = new CompExprContext(new ExprContext(_parentctx, _parentState));
						(_localctx as CompExprContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, dpm_xlParser.RULE_expr);
						this.state = 113;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 114;
						(_localctx as CompExprContext)._op = this.comparisonOperators();
						this.state = 115;
						(_localctx as CompExprContext)._right = this.expr(11);
						}
						break;

					case 5:
						{
						_localctx = new BoolExprContext(new ExprContext(_parentctx, _parentState));
						(_localctx as BoolExprContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, dpm_xlParser.RULE_expr);
						this.state = 117;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 118;
						(_localctx as BoolExprContext)._op = this.match(dpm_xlParser.AND);
						this.state = 119;
						(_localctx as BoolExprContext)._right = this.expr(9);
						}
						break;

					case 6:
						{
						_localctx = new BoolExprContext(new ExprContext(_parentctx, _parentState));
						(_localctx as BoolExprContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, dpm_xlParser.RULE_expr);
						this.state = 120;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 121;
						(_localctx as BoolExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === dpm_xlParser.OR || _la === dpm_xlParser.XOR)) {
							(_localctx as BoolExprContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 122;
						(_localctx as BoolExprContext)._right = this.expr(8);
						}
						break;

					case 7:
						{
						_localctx = new ClauseExprContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, dpm_xlParser.RULE_expr);
						this.state = 123;
						if (!(this.precpred(this._ctx, 15))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 15)");
						}
						this.state = 124;
						this.match(dpm_xlParser.SQUARE_BRACKET_LEFT);
						this.state = 125;
						this.clauseOperators();
						this.state = 126;
						this.match(dpm_xlParser.SQUARE_BRACKET_RIGHT);
						}
						break;
